--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,19 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "hesto/multi-auth": "^2.0",
         "laravel/framework": "^7.29",
+        "laravel/helpers": "^1.4",
         "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
         "livewire/livewire": "^2.3",
         "shipu/themevel": "^2.2",
+        "spatie/eloquent-sortable": "^3.10",
         "spatie/laravel-medialibrary": "^9.0.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
